--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: red;
+   
 }
 :root{
-    --dark-color:#28293E
+    --dark-color:#28293E;
+    --secondary-color:#EF6D58
 }
 .container{
     width: 85%;
@@ -34,11 +35,28 @@ li{
 nav button{
     background-color: transparent;
     color: #fff;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    padding: 0px 15px;
-    height: 40px;
-    cursor: pointer;
+   
+
+}
+
+/* header  */
+.header{
+    padding-top: 90px;
+    background-color: var(--dark-color);
+    height: calc(100vh - 90px);
+    
+}
+.header span{
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.header h1{
+    font-size: 80px;
+    margin: 10px 0px;
+}
+.header p{
+    opacity: .60;
+    width: 90%;
 }
 /* global class */
 .flex{
@@ -56,4 +74,42 @@ nav button{
 .align-items-center{
     align-items: center;
  
+}
+.w-40{
+    width: 40%;
+}
+.w-60{
+    width: 60%;
+}
+.text-secondary{
+    color: var(--secondary-color);
+}
+.text-white{
+    color: white;
+}
+.bg-secondary{
+    background-color: var(--secondary-color);
+}
+.bg-transparent{
+    background-color: transparent;
+}
+.btn{
+    border-radius: 4px;
+    padding: 0px 15px;
+    height: 40px;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+}
+.border{
+    border: 1px solid #fff;
+}
+.btn-rounded{
+    border-radius: 1000px;
+}
+.pt-80{
+    padding-top: 80px;
+}
+.upper{
+    text-transform: uppercase;
 }
