--- a/main.css
+++ b/main.css
@@ -5,7 +5,8 @@ body{
 }
 :root{
     --dark-color:#28293E;
-    --secondary-color:#EF6D58
+    --secondary-color:#EF6D58;
+    --offwhite :#FDF0E9
 }
 .container{
     width: 85%;
@@ -58,12 +59,45 @@ nav button{
     opacity: .60;
     width: 90%;
 }
+/* services */
+.services{
+    
+    width: 100%;
+    background-color: red;
+    overflow: hidden;
+}
+.box{
+    border: 1px solid #F3D1BF;
+    padding: 20px;
+    margin-right: 5px;
+    margin-top: 50px;
+}
+.comb{
+   padding: 10px 0px;
+
+}
+.icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 100px;
+}
+.icon img{
+    width: 25px;
+    height: 25px;
+}
+.learnMore{
+    line-height: 50px;
+    padding-left: 10px;
+}
 /* global class */
 .flex{
     display: flex;
 }
 .justify-content-between{
     justify-content: space-between;
+}
+.justify-content-center{
+    justify-content: center;
 }
 .w-100{
     width: 100%;
@@ -75,11 +109,29 @@ nav button{
     align-items: center;
  
 }
+.w-10{
+    width: 10%;
+}
 .w-40{
     width: 40%;
 }
+.w-50{
+    width: 50%;
+}
 .w-60{
     width: 60%;
+}
+.w-20{
+    width: 20%;
+}
+.w-25{
+    width: 25%;
+}
+.w-30{
+    width: 30%;
+}
+.w-80{
+    width: 80%;
 }
 .text-secondary{
     color: var(--secondary-color);
@@ -87,11 +139,17 @@ nav button{
 .text-white{
     color: white;
 }
+.bg-white{
+    background-color: #fff;
+}
 .bg-secondary{
     background-color: var(--secondary-color);
 }
 .bg-transparent{
     background-color: transparent;
+}
+.bg-offwhite{
+    background-color: var(--offwhite);
 }
 .btn{
     border-radius: 4px;
@@ -104,12 +162,30 @@ nav button{
 .border{
     border: 1px solid #fff;
 }
+.fs-bold{
+    font-weight: bold;
+}
 .btn-rounded{
     border-radius: 1000px;
 }
 .pt-80{
     padding-top: 80px;
 }
+.ps-5{
+    padding-left: 10px;
+}
+.py-100{
+    padding: 100px 0px;
+}
 .upper{
     text-transform: uppercase;
+}
+.capitalize{
+   text-transform: capitalize; 
+}
+.text-center{
+    text-align: center;
+}
+.mx-auto{
+    margin: 0 auto;
 }
