--- a/main.css
+++ b/main.css
@@ -89,6 +89,24 @@ nav button{
     line-height: 50px;
     padding-left: 10px;
 }
+/* Portfolio */
+.Portfolio .events{
+    overflow: hidden;
+    width: 32%;
+    height: 500px;
+    outline: 1px solid #6F6F6F;
+    outline-offset: 10px;
+}
+.Portfolio .img{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.Portfolio .text-content{
+    position: absolute;
+    bottom: -80%;
+    left: 0;
+}
 /* global class */
 .flex{
     display: flex;
@@ -98,6 +116,12 @@ nav button{
 }
 .justify-content-center{
     justify-content: center;
+}
+.flex-directio-column{
+    flex-direction: column;
+}
+.align-items-end{
+    align-items: flex-end;
 }
 .w-100{
     width: 100%;
@@ -145,6 +169,9 @@ nav button{
 .bg-secondary{
     background-color: var(--secondary-color);
 }
+.bg-dark{
+    background-color: var(--dark-color);
+}
 .bg-transparent{
     background-color: transparent;
 }
@@ -158,11 +185,12 @@ nav button{
     cursor: pointer;
     outline: none;
     border: 0;
+    width: max-content;
 }
 .border{
     border: 1px solid #fff;
 }
-.fs-bold{
+.fw-bold{
     font-weight: bold;
 }
 .btn-rounded{
@@ -188,4 +216,19 @@ nav button{
 }
 .mx-auto{
     margin: 0 auto;
+}
+.postion-relative{
+    position: relative;
+}
+.postion-absolute{
+    position: absolute;
+}
+.h-100{
+    height: 100%;
+}
+.b-0{
+    bottom: 0px;
+}
+.left-0{
+    left: 0px;
 }
