--- a/main.css
+++ b/main.css
@@ -3,6 +3,36 @@ body{
     padding: 0;
    
 }
+.layout{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #28293E;
+    z-index: 100;
+    height: 100%;
+    width: 100%;
+}
+.layout .looding{
+    border:2px solid #EF6D58;
+    position: absolute;
+    inset: 50% 0% 0% 50%;
+    transform: translate(-50%,-50%);
+    border-radius: 1000px;
+    width: calc(var(--i) * 20px);
+    height: calc(var(--i) * 20px);
+    animation: lod .5s ease-in-out infinite alternate-reverse;
+}
+@keyframes lod {
+    0%{
+        padding: calc(var(--i) * 3px );
+    }
+    100%{
+        padding: calc(var(--i) / 3px );
+    }
+    
+}
 :root{
     --dark-color:#28293E;
     --secondary-color:#EF6D58;
@@ -207,6 +237,9 @@ nav button{
 }
 .py-10{
     padding:10px 0px ;
+}
+.py-80{
+    padding: 40px 0px;
 }
 .px-10{
     padding: 0px 10px;
