--- a/main.css
+++ b/main.css
@@ -137,6 +137,37 @@ nav button{
     bottom: -80%;
     left: 0;
 }
+
+
+/* feature */
+
+.Features .grid-container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+.Features .grid-container > div img{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+}
+.Features ul li{
+    position: relative;
+    margin: 20px 0px;
+    color: rgba(255, 255, 255, .64);
+}
+.Features ul li::before{
+    content: "";
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    left: -50px;
+    top: 0;
+    background-image: url('./imgs/check.png');
+    background-size: cover;
+    
+}
+
 /* global class */
 .flex{
     display: flex;
@@ -186,6 +217,12 @@ nav button{
 }
 .w-80{
     width: 80%;
+}
+.fs-70{
+    font-size: 70px;
+}
+.fs-20{
+    font-size: 20px;
 }
 .text-secondary{
     color: var(--secondary-color);
