--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&display=swap');
 body{
     margin: 0;
     padding: 0;
@@ -10,7 +12,7 @@ body{
     right: 0;
     bottom: 0;
     background-color: #28293E;
-    z-index: 100;
+    z-index: 10000;
     height: 100%;
     width: 100%;
 }
@@ -40,10 +42,12 @@ body{
 }
 .container{
     width: 85%;
+    overflow: hidden;
     margin: 0 auto;
 }
 *{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Epilogue', Courier, monospace;
+    font-weight: 400;
 }
 /* navbar */
 nav{
@@ -59,6 +63,7 @@ nav{
 ul{
     width: 50%;
     color: #fff;
+    
 }
 li{
     list-style: none;
@@ -72,9 +77,9 @@ nav button{
 
 /* header  */
 .header{
-    padding-top: 90px;
+    padding: 90px 0px;
     background-color: var(--dark-color);
-    height: calc(100vh - 90px);
+   
     
 }
 .header span{
@@ -82,8 +87,11 @@ nav button{
     text-transform: uppercase;
 }
 .header h1{
-    font-size: 80px;
+    font-size: 85px;
     margin: 10px 0px;
+}
+.header img{
+    width: 100%;
 }
 .header p{
     opacity: .60;
@@ -107,9 +115,10 @@ nav button{
 
 }
 .icon{
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
+    width: 26px;
+    padding: 20px;
+    height: 28px;
+    border-radius: 1000px;
 }
 .icon img{
     width: 25px;
@@ -138,7 +147,12 @@ nav button{
     left: 0;
 }
 
+/* info */
 
+.info img{
+    width: 100%;
+    height: 100%;
+}
 /* feature */
 
 .Features .grid-container{
@@ -151,10 +165,12 @@ nav button{
     overflow: hidden;
 
 }
+
 .Features ul li{
     position: relative;
     margin: 20px 0px;
     color: rgba(255, 255, 255, .64);
+    margin-left: 10px;
 }
 .Features ul li::before{
     content: "";
@@ -167,7 +183,15 @@ nav button{
     background-size: cover;
     
 }
-
+/* getStarted */
+.getSarted .grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.getSarted .gift{
+    position: absolute;
+    top: -80px;
+} 
 /* global class */
 .flex{
     display: flex;
@@ -314,4 +338,8 @@ nav button{
 .set{
     padding:0 ;
     margin:0 ;
+}
+.ff-extra-bold{
+    font-family: "Epilogue";
+    font-weight: 400;
 }
