--- a/main.css
+++ b/main.css
@@ -7,10 +7,7 @@ body{
 }
 .layout{
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+
     background-color: #28293E;
     z-index: 10000;
     height: 100%;
@@ -192,6 +189,19 @@ nav button{
     position: absolute;
     top: -80px;
 } 
+/* swiper */
+.swiper .grid-container{
+    display: grid;
+    grid-template-columns: 70px auto;
+    padding-top: 20px;
+}
+.swiper .grid-container img{
+    width: 100%;
+    height: 100%;
+}
+.swiper .text-content {
+    padding-top: 20px;
+}
 /* global class */
 .flex{
     display: flex;
@@ -342,4 +352,26 @@ nav button{
 .ff-extra-bold{
     font-family: "Epilogue";
     font-weight: 400;
+}
+/* swiper */
+
+.swiper-button-prev,.swiper-button-next{
+    color:var(--secondary-color);
+    font-weight: bold;
+}
+.swiper-slide{
+border: 1px solid #EF6D58;
+height: 500px;
+padding: 20px;
+box-sizing: border-box;
+}
+.swiper-slide-next{
+    background-color: #fff;
+}
+.swiper-slide {
+    line-height: 25px;
+    font-size: 20px;
+}
+.swiper-slide .stars{
+    height: 60px;
 }
