--- a/main.css
+++ b/main.css
@@ -7,11 +7,19 @@ body{
 }
 .layout{
     position: absolute;
-
     background-color: #28293E;
     z-index: 10000;
     height: 100%;
     width: 100%;
+}
+.iconNav{
+    position: absolute;
+    right: 20px;
+    top: 13px;
+    padding: 10px 13px;
+    border:2px solid #fff;
+    color: #EF6D58;
+    cursor: pointer;
 }
 .layout .looding{
     border:2px solid #EF6D58;
@@ -64,6 +72,7 @@ ul{
 }
 li{
     list-style: none;
+    cursor: pointer;
 }
 nav button{
     background-color: transparent;
@@ -101,7 +110,7 @@ nav button{
     background-color: red;
     overflow: hidden;
 }
-.box{
+.services .box{
     border: 1px solid #F3D1BF;
     padding: 20px;
     margin-right: 5px;
@@ -132,6 +141,14 @@ nav button{
     height: 500px;
     outline: 1px solid #6F6F6F;
     outline-offset: 10px;
+    flex-wrap: wrap;
+}
+.Portfolio .events img{
+    width: 100%;
+    height: 100%;
+}
+.flex-wrap{
+    flex-wrap: wrap;
 }
 .Portfolio .img{
     height: 100%;
@@ -201,6 +218,52 @@ nav button{
 }
 .swiper .text-content {
     padding-top: 20px;
+}
+/* Faq */
+.faq .grid-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.faq .box{
+    display: grid;
+    grid-template-columns: 95% auto;
+    padding:10px 20px;
+    border: 1px solid #3A3C56;
+    transition: 1s;
+    
+}
+.faq .box.active div:first-child{
+    color: #391400;
+}
+.faq .box.active p{
+    color:#391400;
+}
+.faq .box .dropMenu_icon{
+   background-color: #EF6D58;
+   color: #fff;
+   cursor: pointer;
+   height: 20px;
+   width: 20px;
+   padding: 5px;
+   border-radius: 100px;
+}
+.faq .box.active{
+    background-color: #fff;
+}
+.faq .box .drop-box{
+    height: 0px;
+    transition: .5s ease-in-out;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+}
+
+.faq .box.active .drop-box{
+    height:150px;
+    padding: 20px 0px;
+}
+.faq .box.active .dropMenu_icon{
+    transform: rotate(-180deg);
 }
 /* global class */
 .flex{
