--- a/responsive.css
+++ b/responsive.css
@@ -50,6 +50,10 @@
     .getSarted img{
         transform: translate(-65px,0px);
     }
+    .images-box{
+        
+        grid-template-columns: repeat(2,1fr);
+    }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
