--- a/main.css
+++ b/main.css
@@ -274,7 +274,45 @@ nav button{
     width: 100%;
     height: 100%;
 }
+/* footer */
+.footer .grid-container {
+    display: grid;
+    grid-template: none / repeat(4,1fr);
+} 
+.footer ul {
+    padding: 0;
+}
+.footer ul li{
+    padding: 8px 0px;
+    transition: .5s;
+}
+.footer i{
+    font-size: 20px;
+    transition: .5s;
+}
+.footer .icon{
+    transition: .5s;
+    cursor: pointer;
+    padding: 10px;
+}
+.footer .icon:hover{
+    
+    background-color: #fff;
+}
+.footer .icon:hover i{
+    color: var(--secondary-color);
+}
+.footer li:hover{
+   color: #EF6D58;
+}
+.footer .sub-footer{
 
+grid-template-columns: 3fr 1fr 1fr;
+display: grid;
+}
+.footer .sub-footer div{
+    line-height: 40px;
+}
 /* global class */
 .flex{
     display: flex;
