--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,23 @@
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    .events {
+        width: 100% !important;
+        box-sizing: border-box;
+        flex-wrap: wrap;
+    
+    }
+    .faq .grid-container{
+        display: block;
+    }
+    .faq .grid-container >div{
+        margin: 20px 0px;
+    }.footer > .grid-container{
+        grid-template: none / 1fr  1fr;
+        place-items:unset;
+    }
+    
+}
+
 @media only screen and (max-width: 600px) {
     nav .container div{
         display: block;
@@ -53,9 +73,30 @@
     .images-box{
         
         grid-template-columns: repeat(2,1fr);
+        place-items: center;
     }
-}
+    .footer > .grid-container{
+        grid-template-columns: 100% !important;
+    }
+    .footer .grid-container div, ul :not(:last-chiled){
+        margin: auto;
+        width: 100%;
+        text-align: center;
+    }
+    .footer .grid-container >div, ul{
+        margin: auto;
+    }
+    .icon{
+        padding: 10px;
+    }
+    .box-icon{
+        margin-top: 40px !important;
+    }
+    .footer .sub-footer{     
+        display: grid;
+    }
 
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 768px) {
     .events {
@@ -64,24 +105,10 @@
         flex-wrap: wrap;
         margin-bottom: 20px;
     }
+    
  
 }
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (max-width: 768px) {
-    .events {
-        width: 100% !important;
-        box-sizing: border-box;
-        flex-wrap: wrap;
-    
-    }
-    .faq .grid-container{
-        display: block;
-    }
-    .faq .grid-container >div{
-        margin: 20px 0px;
-    }
-}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
