--- a/main.css
+++ b/main.css
@@ -12,7 +12,16 @@ body{
     height: 100%;
     width: 100%;
 }
-
+.iconNav{
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    padding: 10px 13px;
+    border:2px solid #fff;
+    color: #EF6D58;
+    cursor: pointer;
+    display: none;
+}
 .layout .looding{
     border:2px solid #EF6D58;
     position: absolute;
